# c-charp-to-python-learning

./: .gitignore  AGENTS.md  README.md  pyproject.toml
pages/advanced_walkthrough/: README.md
pages/advanced_walkthrough/01_setup_and_runtime/: 01_python_project_setup_with_uv.md  02_python_execution_model.md
pages/advanced_walkthrough/02_data_and_flow/: 03_variables_names_references_and_mutability.md  04_primitive_types.md  05_collections_list_tuple_dict_set_frozenset.md  06_slicing_and_unpacking.md  07_control_flow.md
pages/advanced_walkthrough/03_functions_and_functional_tools/: 08_functions_and_parameters.md  09_default_arguments_and_keyword_only_arguments.md  10_lambdas.md  11_closures.md  12_decorators.md  13_comprehensions.md  14_iterators_and_generators.md  15_context_managers.md
pages/advanced_walkthrough/04_errors_and_modules/: 16_exceptions.md  17_modules_and_packages.md  18_imports_and_import_system.md
pages/advanced_walkthrough/05_oop_and_modeling/: 19_object_oriented_programming.md  20_inheritance_and_composition.md  21_properties.md  22_dataclasses.md  23_enums.md  25_abstract_base_classes.md
pages/python_only_features/: README.md  feature_01_duck_typing_and_protocols.md  feature_02_extended_unpacking.md  feature_03_generator_pipelines.md  feature_04_contextlib_magic.md  feature_05_descriptors.md  feature_06_pattern_matching.md  feature_07_metaclass_registry.md
scripts/: build_advanced_walkthrough.py  scaffold_tutorial.py  upgrade_csharp_examples.py
src/csharp_to_python_learning/: __init__.py  __main__.py
tests/: test_concept_smoke.py
(+131 files in other folders)
