[project]
name = "csharp-to-python-learning"
version = "0.1.0"
description = "A C# to advanced Python 3.14.5 tutorial repository."
readme = "README.md"
authors = [
    { name = "Nikhil P", email = "nikhilpat@gmail.com" }
]
requires-python = ">=3.14.5"
dependencies = []

[project.scripts]
csharp-to-python-learning = "csharp_to_python_learning:main"

[build-system]
requires = ["uv_build>=0.11.0,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pytest>=9.0.3",
    "ruff>=0.15.13",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "-ra"

[tool.ruff]
target-version = "py314"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "ASYNC", "C4", "SIM"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.14"
files = ["src", "tests"]
check_untyped_defs = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_return_any = false
exclude = ["^scripts/"]
